# frctl

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile.sh  notes.txt  run.sh
include/: colour.h  fractal.h  julia.h  mandelbrot.h  newton.h  render.h  status_codes.h  utils.h  zoom.h
src/: colour.c  fractal.c  julia.c  main.c  mandelbrot.c  newton.c  render.c  zoom.c
